XWIKI-4344: WYSIWYG Menus appear under the toolbar XE-504: Wrong color chosen with color picker in the ColorTheme editor * the main container's margin seems to affect the computing of elements' positions, changed to a padding, for the same effect. Bug fixed with help from Marta Girdea.
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/skins/trunk@23646 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
+++ b/xwiki-platform-colibri/src/main/resources/colibri/colibri.css
@@ -773,7 +773,8 @@ body.mceContentBody {
 
 #xwikimaincontainer, body.hideright #xwikimaincontainer {
   line-height: 1.2em;
-  margin: 20px 0 0;
+  margin: 0;
+  padding-top: 20px;
   text-align: center;
   border: none;
 }
